<resources>
    <string name="app_name">Supra Engineering</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="baumer">Baumer</string>
    <string name="kubler">Kubler</string>
    <string name="moog">Moog</string>
    <string name="panasonic">Panasonic</string>
    <string name="MyApplication">Supra Engineering</string>
    <string name="label">SupraEngineering</string>
    <string name="proface">Proface</string>
    <string name="cognex">Cognex</string>
    <string name="bosch">Bosch</string>
    <string name="katoro">Katoro</string>
    <string name="novotechnik">Novotechnik</string>
    <string name="schimdt">Schimdt</string>
    <string name="vst">VST</string>
    <string name="dit">DIT</string>
    <string name="exone">Exone</string>
    <string name="matsushima">Matsushima</string>
    <string name="toho">TOHO</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_vision">Our Vision</string>
    <string name="to_become_the_best_automation_solution_company_in_indonesia">To become the best automation solution company in Indonesia</string>
    <string name="to_combine_aggressive_strategic_sales_and_marketing_with_quality_products_and_services_at_competitive_prices_to_provide_the_best_insurance_value_for_consumers">To combine aggressive strategic sales and marketing with quality products and services at competitive prices to provide the best insurance value for consumers</string>
    <string name="pt_supra_engineering_was_established_in_1993_as_a_subsidiary_of_supra_group_pt_supra_engineering_was_made_up_and_registered_by_notary_jacinta_susanti_sh_under_notary_act_number_10_and_is_dated_13th_october_1992_this_notary_act_was_legalized_by_the_ministry_of_justice_of_the_republic_of_indonesia_under_decree_number_c2_14137_ht_01_01_th_1993_and_is_dated_21st_december_1993_in_line_with_the_law_we_have_another_permits_to_do_our_business_such_as_siup_tdp_api_etc_according_to_the_deed_intent_purpose_and_business_activity_the_company_is_doing_business_focuses_on_the_customize_design_for_solution_of_automation_industry_system_automotive_packaging_foods_and_beverages_etc_and_the_sales_of_technical_products_for_automation_pt_supra_engineering_has_located_its_display_room_and_warehouse_facilities_in_the_cbd_of_jakarta_customer_service_is_the_main_focus_of_our_experienced_engineers_who_are_supplying_our_customer_requirements_with_competitive_prices_technical_support_and_high_quality_products_to_perform_consistently_and_deliver_value_added_solutions_and_services_to_our_customers_with_the_highest_level_of_quality_in_the_process_meet_or_exceed_customer_expectations">PT. Supra Engineering was established in 1993 as a subsidiary of Supra Group. PT Supra Engineering was made up and registered by Notary Jacinta Susanti SH, under notary act number 10 and is dated 13th October, 1992. This notary act was legalized by the Ministry of Justice of the Republic of Indonesia under decree number C2-14137 HT.01.01.Th 1993 and is dated 21st December, 1993. In line with the Law, we have another permits to do our business such as SIUP, TDP, API, etc. According to the deed, intent, purpose and business activity the Company is doing business focuses on the customize design for solution of automation industry system (automotive, packaging, foods and beverages, etc.) and the sales of technical products for automation. PT. Supra Engineering has located its display room, and warehouse facilities in the CBD of Jakarta. Customer service is the main focus of our experienced engineers, who are supplying our customer requirements with competitive prices, technical support and high quality products. To perform consistently and deliver value-added solutions and services to our customers with the highest level of quality. In the process meet or exceed customer expectations.</string>
    <string name="title_activity_contact_us">contact_us</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="your_message">Your Message...</string>
    <string name="textview">TextView</string>
    <string name="_62_21_3457355">(+62)21-3457355</string>
    <string name="_62_21_3457420">(+62)21-3457420</string>
    <string name="_62_21_3852530">(+62)21-3852530</string>
    <string name="jl_pecenongan_no_17d_gambir_jakarta_pusat_10120">Jl.Pecenongan No 17D. Gambir, Jakarta Pusat 10120</string>
    <string name="or_if_you_have_questions_or_something_to_tell_us_please_kindly_leave_your_message_below">Or if you have questions or something to tell us, please kindly leave your message below</string>
    <string name="atsupra_supra_co_id">atsupra@supra.co.id</string>
    <string name="subject">Subject</string>
    <string name="your_email_password">Your Email password</string>
    <string name="atsupra_supra_co_id_2">atsupra@supra.co.id</string>
    <string name="or_if_you_have_question_or_something_to_tell_us_please_kindly_tap_contact_us_button_below">Or if you have question or something to tell us, please kindly tap contact us button below</string>
    <string name="or_if_you_have_question_or_something_to_tell_us_please_kindly_tap_email_us_button_below">Or if you have question or something to tell us, please kindly tap email us button below</string>
    <string name="email_us">Email Us</string>
</resources>
