<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.myapplication.About_us">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pt_supra_engineering_was_established_in_1993_as_a_subsidiary_of_supra_group_pt_supra_engineering_was_made_up_and_registered_by_notary_jacinta_susanti_sh_under_notary_act_number_10_and_is_dated_13th_october_1992_this_notary_act_was_legalized_by_the_ministry_of_justice_of_the_republic_of_indonesia_under_decree_number_c2_14137_ht_01_01_th_1993_and_is_dated_21st_december_1993_in_line_with_the_law_we_have_another_permits_to_do_our_business_such_as_siup_tdp_api_etc_according_to_the_deed_intent_purpose_and_business_activity_the_company_is_doing_business_focuses_on_the_customize_design_for_solution_of_automation_industry_system_automotive_packaging_foods_and_beverages_etc_and_the_sales_of_technical_products_for_automation_pt_supra_engineering_has_located_its_display_room_and_warehouse_facilities_in_the_cbd_of_jakarta_customer_service_is_the_main_focus_of_our_experienced_engineers_who_are_supplying_our_customer_requirements_with_competitive_prices_technical_support_and_high_quality_products_to_perform_consistently_and_deliver_value_added_solutions_and_services_to_our_customers_with_the_highest_level_of_quality_in_the_process_meet_or_exceed_customer_expectations"
                    android:textSize="23sp"
                    android:layout_margin="15dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_vision"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_become_the_best_automation_solution_company_in_indonesia"
                    android:textSize="23sp"
                    android:layout_margin="15dp"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_mission"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_combine_aggressive_strategic_sales_and_marketing_with_quality_products_and_services_at_competitive_prices_to_provide_the_best_insurance_value_for_consumers"
                    android:textSize="23sp"
                    android:layout_margin="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
